Finally finished my website woo!

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -16,84 +16,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!-- {% include head-custom.html %} -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<style>
-	.sidenav {
-	  height: 100%;
-	  width: 160px;
-	  position: fixed;
-	  z-index: 1;
-	  top: 0;
-	  left: 0;
-	  background-color: #111;
-	  overflow-x: hidden;
-	  padding-top: 20px;
-	}
-
-	.sidenav a {
-	  padding: 6px 8px 6px 16px;
-	  text-decoration: none;
-	  font-size: 16px;
-	  color: #818181;
-	  display: block;
-	}
-
-	.sidenav a:hover {
-	  color: #f1f1f1;
-	}
-
-	.main {
-	  margin-left: 160px; /* Same as the width of the sidenav */
-	  font-size: 28px; /* Increased text to enable scrolling */
-	  padding: 0px 10px;
-	}
-
-	@media screen and (max-height: 450px) {
-	  .sidenav {padding-top: 15px;}
-	  .sidenav a {font-size: 18px;}
-	}
-	.fa {
-	  padding: 20px;
-	  font-size: 30px;
-	}
-
-	.fa:hover {
-		opacity: 0.7;
-	}
-
-	.fa-twitter {
-	  height: 1%;
-	  width: 2%;
-	}
-	.fa-github {
-	  height: 1%;
-	  width: 2%;
-	}
-	.fa-gitlab {
-	  height: 1%;
-	  width: 2%;
-	}
-	.fa-linkedin {
-	  height: 1%;
-	  width: 2%;
-	}
-	.center {
-	  margin: auto;
-	  width: 40%;
-	}
-	.centerTop {
-	  margin: auto;
-	  width: 20%;
-	  text-align: center;
-	}
-	</style>
   </head>
   <body>
 		<div class="sidenav">
+			  <div class="sidenav">
 			  <a href="/about.html">About</a>
 			  <a href="/workexperience.html">Work Experience</a>
 			  <a href="/projects.html">Projects</a>
 			  <a href="/contact.html">Contact</a>
-			  <a href="Mark_Manson_2022_Resume.pdf">Resume</a>
+			  <a href="https://github.com/pages-themes/midnight/zipball/master">Resume</a>
 		</div>
 		</div>
 		<div class="centerTop">
@@ -102,13 +33,10 @@
 		<div class="wrapper">
 			<section>
 				<div id="body">
-				{{content}}
+				TEST ABOUT
 				</div>
 			</section>
 		</div>
-		<section>
-		
-		</section>
 	   <div class="wrapper">
 	  <footer>
 	  <hr>
