--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -54,6 +54,11 @@
 	.fa {
 	  padding: 20px;
 	  font-size: 30px;
+	  width: 30px;
+	  text-align: center;
+	  text-decoration: none;
+	  margin: 5px 2px;
+	  border-radius: 50%;
 	}
 
 	.fa:hover {
@@ -63,18 +68,22 @@
 	.fa-twitter {
 	  height: 1%;
 	  width: 2%;
+	  color: white;
 	}
 	.fa-github {
 	  height: 1%;
 	  width: 2%;
+	  color: white;
 	}
 	.fa-gitlab {
 	  height: 1%;
 	  width: 2%;
+	  color: white;
 	}
 	.fa-linkedin {
 	  height: 1%;
 	  width: 2%;
+	  color: white;
 	}
 	.center {
 	  margin: auto;
@@ -89,11 +98,12 @@
   </head>
   <body>
 		<div class="sidenav">
+			  <div class="sidenav">
 			  <a href="/about.html">About</a>
 			  <a href="/workexperience.html">Work Experience</a>
 			  <a href="/projects.html">Projects</a>
 			  <a href="/contact.html">Contact</a>
-			  <a href="Mark_Manson_2022_Resume.pdf">Resume</a>
+			  <a href="https://github.com/pages-themes/midnight/zipball/master">Resume</a>
 		</div>
 		</div>
 		<div class="centerTop">
@@ -102,13 +112,26 @@
 		<div class="wrapper">
 			<section>
 				<div id="body">
-				{{content}}
+					<br>
+					<h2>About Me</h2>
+					<p><a href="./NextPage.html">Work Experience</a></p>
+					<p><a href="./NextPage.html">Projects</a></p>
+					I'm Mark Manson, A VR/Game Developer with over 5 years of experience. I'm an avid gamer, programmer and love to work on games!
+					<br>
+					<br>
+					My first job in the software development world was working on a mobile app, I handled developing the app for Android and iOS in separate programming languages, talking to the project manager, doing the design, testing the app on both platforms and then upload it to the google play/app store. 
+					<br>
+					<br>
+					Most of my experience comes from job as a lead programmer at Unlit Games, where I handled quite a lot of the codebase. I also helped out any new programmers that worked with us, understand the systems we have in place and helped them get up to speed.
+					<br>
+					<br>
+					I also spend my spare time working on a game with a group of friends, I'm the lead programmer for that project.]
+					<br>
+					<br>
+					I really enjoy working on games!
 				</div>
 			</section>
 		</div>
-		<section>
-		
-		</section>
 	   <div class="wrapper">
 	  <footer>
 	  <hr>
