--- a/_layouts/workexperience.html
+++ b/_layouts/workexperience.html
@@ -54,6 +54,11 @@
 	.fa {
 	  padding: 20px;
 	  font-size: 30px;
+	  width: 30px;
+	  text-align: center;
+	  text-decoration: none;
+	  margin: 5px 2px;
+	  border-radius: 50%;
 	}
 
 	.fa:hover {
@@ -63,18 +68,22 @@
 	.fa-twitter {
 	  height: 1%;
 	  width: 2%;
+	  color: white;
 	}
 	.fa-github {
 	  height: 1%;
 	  width: 2%;
+	  color: white;
 	}
 	.fa-gitlab {
 	  height: 1%;
 	  width: 2%;
+	  color: white;
 	}
 	.fa-linkedin {
 	  height: 1%;
 	  width: 2%;
+	  color: white;
 	}
 	.center {
 	  margin: auto;
@@ -89,11 +98,12 @@
   </head>
   <body>
 		<div class="sidenav">
+			  <div class="sidenav">
 			  <a href="/about.html">About</a>
 			  <a href="/workexperience.html">Work Experience</a>
 			  <a href="/projects.html">Projects</a>
 			  <a href="/contact.html">Contact</a>
-			  <a href="Mark_Manson_2022_Resume.pdf">Resume</a>
+			  <a href="https://github.com/pages-themes/midnight/zipball/master">Resume</a>
 		</div>
 		</div>
 		<div class="centerTop">
@@ -101,14 +111,9 @@
 		</div>
 		<div class="wrapper">
 			<section>
-				<div id="body">
-				{{content}}
-				</div>
+			{{content}}
 			</section>
 		</div>
-		<section>
-		
-		</section>
 	   <div class="wrapper">
 	  <footer>
 	  <hr>
