--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -5,7 +5,7 @@
 body {
   padding:0px 0 20px 0px;
   margin: 0px;
-  font:14px/1.5 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font:12px/1.5 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#f0e7d5;
   font-weight: normal;
   background: #252525;
@@ -31,6 +31,7 @@ h1, h2, h3 {
 
 h1 {
   font-size:28px;
+  padding:0px 0 20px 0px;
 }
 
 h2 {
