--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,20 +100,16 @@
 		<h1>Mark's Portfolio</h1>
 		</div>
 		<div class="wrapper">
-			<section>
-				<div id="body">
+			<div id="body">
 				{{content}}
-				</div>
-			</section>
+			</div>
 		</div>
-		<section>
-		
-		</section>
 	   <div class="wrapper">
 	  <footer>
 	  <hr>
         <div class="center">
-          
+            Connect with me through social media!
+			<br>
 			<a href="https://twitter.com/Arcticfoenix" class="fa fa-twitter"></a>
 			<a href="https://www.linkedin.com/in/markgeraldmanson/" class="fa fa-linkedin"></a>
 			<a href="https://github.com/f03n1x" class="fa fa-github"></a>
