Setup about as index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,7 @@
   </head>
   <body>
 		<div class="sidenav">
-			  <a href="/about.html">About</a>
+			  <a href="/">About</a>
 			  <a href="/workexperience.html">Work Experience</a>
 			  <a href="/projects.html">Projects</a>
 			  <a href="/contact.html">Contact</a>
