--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<!--{% seo %}-->
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
@@ -14,33 +13,42 @@
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!-- {% include head-custom.html %} -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<style>
 	.sidenav {
 	  height: 100%;
-	  width: 160px;
+	  width: 0;
 	  position: fixed;
 	  z-index: 1;
 	  top: 0;
 	  left: 0;
 	  background-color: #111;
 	  overflow-x: hidden;
-	  padding-top: 20px;
+	  transition: 0.5s;
+	  padding-top: 60px;
 	}
 
 	.sidenav a {
-	  padding: 6px 8px 6px 16px;
+	  padding: 8px 8px 8px 32px;
 	  text-decoration: none;
-	  font-size: 16px;
+	  font-size: 25px;
 	  color: #818181;
 	  display: block;
+	  transition: 0.3s;
 	}
 
 	.sidenav a:hover {
 	  color: #f1f1f1;
 	}
-
+	
+	.sidenav .closebtn {
+	  position: absolute;
+	  top: 0;
+	  right: 25px;
+	  font-size: 36px;
+	  margin-left: 50px;
+	}
+	
 	.main {
 	  margin-left: 160px; /* Same as the width of the sidenav */
 	  font-size: 28px; /* Increased text to enable scrolling */
@@ -88,13 +96,15 @@
 	</style>
   </head>
   <body>
-		<div class="sidenav">
+		<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 			  <a href="/">About</a>
 			  <a href="/workexperience.html">Work Experience</a>
 			  <a href="/projects.html">Projects</a>
 			  <a href="/contact.html">Contact</a>
 			  <a href="Mark_Manson_2022_Resume.pdf">Resume</a>
 		</div>
+		<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
 		</div>
 		<div class="centerTop">
 		<h1>Mark's Portfolio</h1>
@@ -118,5 +128,18 @@
 	  </footer>
 
     </div>
+	<script>
+	function openNav() {
+	  document.getElementById("mySidenav").style.width = "250px";
+	  document.getElementById("main").style.marginLeft = "250px";
+	  document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
+	}
+
+	function closeNav() {
+	  document.getElementById("mySidenav").style.width = "0";
+	  document.getElementById("main").style.marginLeft= "0";
+	  document.body.style.backgroundColor = "white";
+	}
+	</script>
   </body>
 </html>
