added meta data

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,9 @@
     <!--[if lt IE 8]>
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
+	<meta name= "author" content="Mark Manson">
 	<meta name="description" content="Mark Manson | VR/Game Developer" />
+	 <meta name="keywords" content="Game Developer, VR, Unity, Unity3D, C#, Senior Developer"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<style>
