--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,24 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="utf-8">
+	
+	
+	<!-- Begin Jekyll SEO tag v2.7.1 -->
+	<title>Midnight theme | Midnight is a theme for GitHub Pages.</title>
+	<meta name="generator" content="Jekyll v3.9.0" />
+	<meta property="og:title" content="Mark's Portfolio" />
+	<meta property="og:locale" content="en_US" />
+	<meta name="description" content="Mark Manson | VR/Game Developer" />
+	<meta property="og:description" content="Mark Manson | VR/Game Developer" />
+	<link rel="canonical" href="https://f03n1x.github.io/" />
+	<meta property="og:url" content="https://f03n1x.github.io/" />
+	<meta property="og:site_name" content="Mark's Portfolio" />
+	<meta name="twitter:card" content="summary" />
+	<meta property="twitter:title" content="Mark's Portfolio" />
+	<script type="application/ld+json">
+	{"description":"Mark Manson | VR/Game Developer","url":"https://f03n1x.github.io/","@type":"WebSite","headline":"Mark Manson VR/Game Developer","name":"Mark Manson | VR/Game Developer","@context":"https://schema.org" }</script>
+	<!-- End Jekyll SEO tag -->
+	
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
@@ -14,7 +32,7 @@
     <![endif]-->
 	<meta name= "author" content="Mark Manson">
 	<meta name="description" content="Mark Manson | VR/Game Developer" />
-	 <meta name="keywords" content="Game Developer, VR, Unity, Unity3D, C#, Senior Developer"> 
+	<meta name="keywords" content="Game Developer, VR, Unity, Unity3D, C#, Senior Developer"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<style>
