--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	
 	
 	<!-- Begin Jekyll SEO tag v2.7.1 -->
-	<title>Midnight theme | Midnight is a theme for GitHub Pages.</title>
+	<title>Mark Manson | VR Game Developer</title>
 	<meta name="generator" content="Jekyll v3.9.0" />
 	<meta property="og:title" content="Mark's Portfolio" />
 	<meta property="og:locale" content="en_US" />
