Added plausible data collection

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="utf-8">
-	
-	
+	<!-- Plausiable website tracking -->
+	<script defer data-domain="markmanson.dev" src="https://plausible.io/js/script.js"></script>	
 	<!-- Begin Jekyll SEO tag v2.7.1 -->
 	<title>Mark Manson | VR Game Developer</title>
 	<meta name="generator" content="Jekyll v3.9.0" />
@@ -17,7 +17,7 @@
 	<meta name="twitter:card" content="summary" />
 	<meta property="twitter:title" content="Mark's Portfolio" />
 	<script type="application/ld+json">
-	{"description":"Mark Manson | VR/Game Developer","url":"https://f03n1x.github.io/","@type":"WebSite","headline":"Mark Manson VR/Game Developer","name":"Mark Manson | VR/Game Developer","@context":"https://schema.org" }</script>
+	{"description":"Mark Manson | Game Developer","url":"https://f03n1x.github.io/","@type":"WebSite","headline":"Mark Manson Game Developer","name":"Mark Manson | Game Developer","@context":"https://schema.org" }</script>
 	<!-- End Jekyll SEO tag -->
 	
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
