--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,13 +11,13 @@
 	<meta property="og:locale" content="en_US" />
 	<meta name="description" content="Mark Manson | VR/Game Developer" />
 	<meta property="og:description" content="Mark Manson | VR/Game Developer" />
-	<link rel="canonical" href="https://f03n1x.github.io/" />
-	<meta property="og:url" content="https://f03n1x.github.io/" />
+	<link rel="canonical" href="https://markmanson.dev/" />
+	<meta property="og:url" content="https://markmanson.dev/" />
 	<meta property="og:site_name" content="Mark's Portfolio" />
 	<meta name="twitter:card" content="summary" />
 	<meta property="twitter:title" content="Mark's Portfolio" />
 	<script type="application/ld+json">
-	{"description":"Mark Manson | Game Developer","url":"https://f03n1x.github.io/","@type":"WebSite","headline":"Mark Manson Game Developer","name":"Mark Manson | Game Developer","@context":"https://schema.org" }</script>
+	{"description":"Mark Manson | Game Developer","url":"https://markmanson.dev/","@type":"WebSite","headline":"Mark Manson Game Developer","name":"Mark Manson | Game Developer","@context":"https://schema.org" }</script>
 	<!-- End Jekyll SEO tag -->
 	
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
