added back other seo stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,22 @@
 	<!-- Plausiable website tracking -->
 	<script defer data-domain="markmanson.dev" src="https://plausible.io/js/script.js"></script>
     <meta charset="utf-8">
+	<!-- Begin Jekyll SEO tag v2.7.1 -->
+	<title>Mark Manson | VR Game Developer</title>
+	<meta name="generator" content="Jekyll v3.9.0" />
+	<meta property="og:title" content="Mark's Portfolio" />
+	<meta property="og:locale" content="en_US" />
+	<meta name="description" content="Mark Manson | VR/Game Developer" />
+	<meta property="og:description" content="Mark Manson | VR/Game Developer" />
+	<link rel="canonical" href="https://markmanson.dev/" />
+	<meta property="og:url" content="https://markmanson.dev/" />
+	<meta property="og:site_name" content="Mark's Portfolio" />
+	<meta name="twitter:card" content="summary" />
+	<meta property="twitter:title" content="Mark's Portfolio" />
+	<script type="application/ld+json">
+	{"description":"Mark Manson | Game Developer","url":"https://markmanson.dev/","@type":"WebSite","headline":"Mark Manson Game Developer","name":"Mark Manson | Game Developer","@context":"https://schema.org" }</script>
+	<!-- End Jekyll SEO tag -->
+	
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
