Added mastadon social link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
 	<meta name="generator" content="Jekyll v3.9.0" />
 	<meta property="og:title" content="Mark's Portfolio" />
 	<meta property="og:locale" content="en_US" />
-	<meta name="description" content="Mark Manson | VR/Game Developer" />
-	<meta property="og:description" content="Mark Manson | VR/Game Developer" />
+	<meta name="description" content="Mark Manson | Game Developer" />
+	<meta property="og:description" content="Mark Manson | Game Developer" />
 	<link rel="canonical" href="https://markmanson.dev/" />
 	<meta property="og:url" content="https://markmanson.dev/" />
 	<meta property="og:site_name" content="Mark's Portfolio" />
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
 	<meta name= "author" content="Mark Manson">
-	<meta name="description" content="Mark Manson | VR/Game Developer" />
+	<meta name="description" content="Mark Manson | Game Developer" />
 	<meta name="keywords" content="Game Developer, VR, Unity, Unity3D, C#, Senior Developer"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -121,6 +121,7 @@
 			<a href="https://www.linkedin.com/in/markgeraldmanson/" class="fa fa-linkedin"></a>
 			<a href="https://github.com/f03n1x" class="fa fa-github"></a>
 			<a href="https://gitlab.com/f03n1x" class="fa fa-gitlab"></a>
+		        <i class="fa-brands fa-mastodon fa-spin">https://peoplemaking.games/@f03n1x</i>
         </div>
 	  </footer>
     </div>
