--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
 	<meta name= "author" content="Mark Manson">
 	<meta name="description" content="Mark Manson | Game Developer" />
 	<meta name="keywords" content="Game Developer, VR, Unity, Unity3D, C#, Senior Developer"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<script src="https://kit.fontawesome.com/bb074e49dd.js" crossorigin="anonymous"></script>
 	<style>
 	.topnav {
 	  overflow: hidden;
@@ -117,11 +117,11 @@
         <div class="center">
             Connect with me through social media!
 			<br>
-			<a href="https://twitter.com/Arcticfoenix" class="fa fa-twitter"></a>
+			<i href="https://twitter.com/Arcticfoenix" class="fa-brands fa-twitter"></i>
 			<a href="https://www.linkedin.com/in/markgeraldmanson/" class="fa fa-linkedin"></a>
 			<a href="https://github.com/f03n1x" class="fa fa-github"></a>
 			<a href="https://gitlab.com/f03n1x" class="fa fa-gitlab"></a>
-		        <i class="fa-brands fa-mastodon fa-spin">https://peoplemaking.games/@f03n1x</i>
+		        <i href= "https://peoplemaking.games/@f03n1x" class="fa-brands fa-mastodon fa-spin"></i>
         </div>
 	  </footer>
     </div>
