Font awesome update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,11 +117,11 @@
         <div class="center">
             Connect with me through social media!
 			<br>
-			<i href="https://twitter.com/Arcticfoenix" class="fa-brands fa-twitter"></i>
-			<a href="https://www.linkedin.com/in/markgeraldmanson/" class="fa fa-linkedin"></a>
-			<a href="https://github.com/f03n1x" class="fa fa-github"></a>
-			<a href="https://gitlab.com/f03n1x" class="fa fa-gitlab"></a>
-		        <i href= "https://peoplemaking.games/@f03n1x" class="fa-brands fa-mastodon fa-spin"></i>
+			<i href="https://twitter.com/Arcticfoenix" class="fa-brands fa-twitter fa-lg"></i>
+			<a href="https://www.linkedin.com/in/markgeraldmanson/" class="fa fa-linkedin fa-lg"></a>
+			<a href="https://github.com/f03n1x" class="fa fa-github fa-lg"></a>
+			<a href="https://gitlab.com/f03n1x" class="fa fa-gitlab fa-lg"></a>
+		        <i href= "https://peoplemaking.games/@f03n1x" class="fa-brands fa-mastodon fa-spin fa-lg"></i>
         </div>
 	  </footer>
     </div>
