--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
 	<meta name="description" content="Mark Manson | Game Developer" />
 	<meta name="keywords" content="Game Developer, VR, Unity, Unity3D, C#, Senior Developer"> 
     	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://kit.fontawesome.com/bb074e49dd.js" crossorigin="anonymous"></script>
 	<style>
 	.topnav {
