--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,11 +118,11 @@
         <div class="center">
             Connect with me through social media!
 			<br>
-			<i href="https://twitter.com/Arcticfoenix" class="fa-brands fa-twitter fa-lg"></i>
-			<i href="https://www.linkedin.com/in/markgeraldmanson/" class="fa-brands fa-linkedin fa-lg"></i>
-			<i href="https://github.com/f03n1x" class="fa-brands fa-github fa-lg"></i>
-			<i href="https://gitlab.com/f03n1x" class="fa-brands fa-gitlab"></i>
-		        <i href= "https://peoplemaking.games/@f03n1x" class="fa-brands fa-mastodon fa-spin fa-lg"></i>
+			<i href="https://twitter.com/Arcticfoenix" class="fa-brands fa-twitter fa-2x"></i>
+			<i href="https://www.linkedin.com/in/markgeraldmanson/" class="fa-brands fa-linkedin fa-2x"></i>
+			<i href="https://github.com/f03n1x" class="fa-brands fa-github fa-2x"></i>
+			<i href="https://gitlab.com/f03n1x" class="fa-brands fa-gitlab fa-2x"></i>
+		        <i href= "https://peoplemaking.games/@f03n1x" class="fa-brands fa-mastodon fa-spin fa-2x"></i>
         </div>
 	  </footer>
     </div>
