--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,7 +122,7 @@
 			<i href="https://www.linkedin.com/in/markgeraldmanson/" class="fa-brands fa-linkedin fa-2x"></i>
 			<i href="https://github.com/f03n1x" class="fa-brands fa-github fa-2x"></i>
 			<i href="https://gitlab.com/f03n1x" class="fa-brands fa-gitlab fa-2x"></i>
-		        <i href= "https://peoplemaking.games/@f03n1x" class="fa-brands fa-mastodon fa-spin fa-2x"></i>
+			<i href= "https://peoplemaking.games/@f03n1x" class='fab fa-mastodon' style='font-size:24px'></i>
         </div>
 	  </footer>
     </div>
