--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
 	<!-- Plausiable website tracking -->
 	<script defer data-domain="markmanson.dev" src="https://plausible.io/js/script.js"></script>
-    <meta charset="utf-8">
+    	<meta charset="utf-8">
 	<!-- Begin Jekyll SEO tag v2.7.1 -->
 	<title>Mark Manson | Game Developer</title>
 	<meta name="generator" content="Jekyll v3.9.0" />
@@ -19,81 +19,74 @@
 	<script type="application/ld+json">
 	{"description":"Mark Manson | Game Developer","url":"https://markmanson.dev/","@type":"WebSite","headline":"Mark Manson Game Developer","name":"Mark Manson | Game Developer","@context":"https://schema.org" }</script>
 	<!-- End Jekyll SEO tag -->
-	
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-    <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
-    <![endif]-->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    	<script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
+    	<!--[if lt IE 9]>
+      		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    	<![endif]-->
+    	<!--[if lt IE 8]>
+    		<link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
+    	<![endif]-->
 	<meta name= "author" content="Mark Manson">
 	<meta name="description" content="Mark Manson | Game Developer" />
 	<meta name="keywords" content="Game Developer, VR, Unity, Unity3D, C#, Senior Developer"> 
     	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="https://kit.fontawesome.com/bb074e49dd.js" crossorigin="anonymous"></script>
 	<style>
-	.topnav {
-	  overflow: hidden;
-	  background-color: #333;
-	}
-	
-	.topnav a {
-	  float: left;
-	  color: #f2f2f2;
-	  text-align: center;
-	  padding: 10px 10px;
-	  text-decoration: none;
-	  font-size: 14px;
-	}
-
-	.topnav a:hover {
-	  background-color: #ddd;
-	  color: black;
-	}
-
-	.topnav a.active {
-	  background-color: #04AA6D;
-	  color: white;
-	}
-	.fa {
-	  padding: 20px;
-	  font-size: 30px;
-	}
-
-	.fa:hover {
-		opacity: 0.7;
-	}
-
-	.fa-twitter {
-	  height: 1%;
-	  width: 2%;
-	}
-	.fa-github {
-	  height: 1%;
-	  width: 2%;
-	}
-	.fa-gitlab {
-	  height: 1%;
-	  width: 2%;
-	}
-	.fa-linkedin {
-	  height: 1%;
-	  width: 2%;
-	}
-	.center {
-	  margin: auto;
-	  width: 40%;
-	}
-	.centerTop {
-	  margin: auto;
-	  width: 20%;
-	  text-align: center;
-	}
+		.topnav {
+		  overflow: hidden;
+		  background-color: #333;
+		}
+		.topnav a {
+		  float: left;
+		  color: #f2f2f2;
+		  text-align: center;
+		  padding: 10px 10px;
+		  text-decoration: none;
+		  font-size: 14px;
+		}
+		.topnav a:hover {
+		  background-color: #ddd;
+		  color: black;
+		}
+		.topnav a.active {
+		  background-color: #04AA6D;
+		  color: white;
+		}
+		.fa {
+		  padding: 20px;
+		  font-size: 30px;
+		}
+		.fa:hover {
+		  opacity: 0.7;
+		}
+		.fa-twitter {
+		  height: 1%;
+		  width: 2%;
+		}
+		.fa-github {
+		  height: 1%;
+		  width: 2%;
+		}
+		.fa-gitlab {
+		  height: 1%;
+		  width: 2%;
+		}
+		.fa-linkedin {
+		  height: 1%;
+		  width: 2%;
+		}
+		.center {
+		  margin: auto;
+		  width: 40%;
+		}
+		.centerTop {
+		  margin: auto;
+		  width: 20%;
+		  text-align: center;
+		}
 	</style>
   </head>
   <body>
@@ -118,11 +111,10 @@
         <div class="center">
             Connect with me through social media!
 			<br>
-			<i href="https://twitter.com/Arcticfoenix" class="fa-brands fa-twitter fa-2x"></i>
-			<i href="https://www.linkedin.com/in/markgeraldmanson/" class="fa-brands fa-linkedin fa-2x"></i>
-			<i href="https://github.com/f03n1x" class="fa-brands fa-github fa-2x"></i>
-			<i href="https://gitlab.com/f03n1x" class="fa-brands fa-gitlab fa-2x"></i>
-			<i href= "https://peoplemaking.games/@f03n1x" class='fab fa-mastodon' style='font-size:24px'></i>
+			<a href="https://twitter.com/Arcticfoenix" class="fa fa-twitter"></a>
+			<a href="https://www.linkedin.com/in/markgeraldmanson/" class="fa fa-linkedin"></a>
+			<a href="https://github.com/f03n1x" class="fa fa-github"></a>
+			<a href="https://gitlab.com/f03n1x" class="fa fa-gitlab"></a>
         </div>
 	  </footer>
     </div>
