--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,6 +78,10 @@
 		  height: 1%;
 		  width: 2%;
 		}
+		.fa-mastadon {
+		  height: 1%;
+		  width: 2%;
+		}
 		.center {
 		  margin: auto;
 		  width: 40%;
@@ -115,6 +119,7 @@
 			<a href="https://www.linkedin.com/in/markgeraldmanson/" class="fa fa-linkedin"></a>
 			<a href="https://github.com/f03n1x" class="fa fa-github"></a>
 			<a href="https://gitlab.com/f03n1x" class="fa fa-gitlab"></a>
+			<a href="https://peoplemaking.games/@f03n1x" class="fa fa-mastadon"></a>
         </div>
 	  </footer>
     </div>
