--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
 		  height: 1%;
 		  width: 2%;
 		}
-		.fa-mastadon {
+		.fa-mastodon {
 		  height: 1%;
 		  width: 2%;
 		}
@@ -119,7 +119,7 @@
 			<a href="https://www.linkedin.com/in/markgeraldmanson/" class="fa fa-linkedin"></a>
 			<a href="https://github.com/f03n1x" class="fa fa-github"></a>
 			<a href="https://gitlab.com/f03n1x" class="fa fa-gitlab"></a>
-			<a href="https://peoplemaking.games/@f03n1x" class="fa fa-mastadon"></a>
+			<a href="https://peoplemaking.games/@f03n1x" class="fa fa-mastodon"></a>
         </div>
 	  </footer>
     </div>
