--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,8 +96,8 @@
   <body>
 		<div class="topnav">
 		  <a href="/">About</a>
-		  <a href="/workexperience.html">Work Experience</a>
-		  <a href="/projects.html">Projects</a>
+		  <a href="/workexperience">Work Experience</a>
+		  <a href="/projects">Projects</a>
 		  <a href="Mark_Manson_Resume_2023.pdf">Resume</a>
 		</div>
 		<br>
