Fixed youtube emdedded vids + added video auto resizing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+  
 	<!-- Plausiable website tracking -->
 	<script defer data-domain="markmanson.dev" src="https://plausible.io/js/script.js"></script>
     	<meta charset="utf-8">
@@ -34,6 +35,7 @@
 	<meta name="keywords" content="Game Developer, VR, Unity, Unity3D, C#, Senior Developer"> 
     	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../assets/css/video-embed.css">
 	<style>
 		.topnav {
 		  overflow: hidden;
