--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,15 +8,15 @@
 	<!-- Begin Jekyll SEO tag v2.7.1 -->
 	<title>Mark Manson | Game Developer</title>
 	<meta name="generator" content="Jekyll v3.9.0" />
-	<meta property="og:title" content="Mark's Portfolio" />
+	<meta property="og:title" content="Mark's Website" />
 	<meta property="og:locale" content="en_US" />
 	<meta name="description" content="Mark Manson | Game Developer" />
 	<meta property="og:description" content="Mark Manson | Game Developer" />
 	<link rel="canonical" href="https://markmanson.dev/" />
 	<meta property="og:url" content="https://markmanson.dev/" />
-	<meta property="og:site_name" content="Mark's Portfolio" />
+	<meta property="og:site_name" content="Mark's Website" />
 	<meta name="twitter:card" content="summary" />
-	<meta property="twitter:title" content="Mark's Portfolio" />
+	<meta property="twitter:title" content="Mark's Website" />
 	<script type="application/ld+json">
 	{"description":"Mark Manson | Game Developer","url":"https://markmanson.dev/","@type":"WebSite","headline":"Mark Manson Game Developer","name":"Mark Manson | Game Developer","@context":"https://schema.org" }</script>
 	<!-- End Jekyll SEO tag -->
