--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,7 +104,7 @@
 		</div>
 		<br>
 		<div class="centerTop">
-		<h1>Mark's Portfolio</h1>
+		<h1>Mark's Website</h1>
 		</div>
 		<div class="wrapper">
 			<div id="body">
