--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,7 +100,7 @@
 		  <a href="/">About</a>
 		  <a href="/workexperience">Work Experience</a>
 		  <a href="/projects">Projects</a>
-		  <a href="Mark_Manson_Resume_2024.pdf">Resume</a>
+		  <a href="/vindecoder">MWC Vin Decoder</a>
 		</div>
 		<br>
 		<div class="centerTop">
