--- a/_includes/vindecoder.html
+++ b/_includes/vindecoder.html
@@ -1,5 +1,21 @@
 <html>
-	
+	<style>
+		* {
+		  box-sizing: border-box;
+		}
+		.column {
+		  float: left;
+		  width: 50%;
+		  padding: 10px;
+		  height: 300px; /* Should be removed. Only for demonstration */
+		}
+		.row:after {
+		  content: "";
+		  display: table;
+		  clear: both;
+		}
+	</style>
+
 
 	<body bgcolor="#cecece">
 				
@@ -7,17 +23,74 @@
 		
 		 <img src="/assets/images/example_vin.png" alt="The very first vin plate I got on my first My Winter Car playthrough">
 		
-		<!-- UBBBDML465541NABBAU-KJ-184-A- Is the code shown on the vinplate my summer car website -->
-		<p>VIN Code: <input type="text" id="vincode" value="UBBBDML465541NABBAU-KJ-184-A-" style="width:215px"></p>
-	
-		<button onclick="decodeVin()">Decode VIN!</button>
+		<div class="row">
+			<div class="column">
+				<label>VIN Decode V1</label>
+				<br>
+				<label> DOES NOT USE TYPE OR VERSION</label>
+				<!-- UBBBDML465541NABBAU-KJ-184-A- Is the code shown on the vinplate my winter car website -->
+				<p>VIN Code: <input type="text" id="vincode" value="UBBBDML465541NABBAU-KJ-184-A-" style="width:220px" maxlength="29"></p>
+				<button onclick="decodeVin(vincode, decodedVIN_type1)">Decode VIN!</button>
+				<ul id="decodedVIN_type1">
+				
+				</ul>
+			</div>
+
+			<div class="column">
+				<label>VIN Decode V2</label>
+					<p style="font-size:120%;">Type | Version | Vehicle No.</p>
+				<div style="padding: 15px; ">
+					<input type="text" id="vin_type" value="GG" maxlength="2" style=width:32px>
+					<label style="padding: 8px;">&nbsp;</label>
+					<input type="text" id="vin_version" value="G" maxlength="1" style=width:16px>
+					<label style="padding: 8px;">&nbsp;&nbsp;</label>
+					<input type="text" id="vin_vehicleNo" value="UBBBDML46554" maxlength="12" style=width:110px>
+				</div>
+					<p style="font-size:120%;">Drive | Engine | Trans. | Axle | Colour | Trim</p>
+				<div style="padding: 15px;">
+					<input type="text" id="vin_drive" value="1" maxlength="1" style=width:16px>
+					<label style="padding: 8px;">&nbsp;</label>
+					<input type="text" id="vin_engine" value="NA" maxlength="2" style=width:32px>
+					<label style="padding: 16px;">&nbsp;</label>
+					<input type="text" id="vin_trans" value="B" maxlength="1" style=width:16px>
+					<label style="padding: 12px;">&nbsp;&nbsp;</label>
+					<input type="text" id="vin_axle" value="BA" maxlength="2" style=width:32px>
+					<label style="padding: 4px;">&nbsp;&nbsp;</label>
+					<input type="text" id="vin_colour" value="U-" maxlength="2" style=width:32px>
+					<label style="padding: 8px;">&nbsp;&nbsp;</label>
+					<input type="text" id="vin_trim" value="K" maxlength="1" style=width:16px>
+				</div>
+					<p style="font-size:120%;">L.D.O</p>
+				<div style="padding: 15px; ">
+					<input type="text" id="vin_ldo" value="J-184-A-" maxlength="8" style=width:64px>
+				</div>
+				<button onclick="decodeVin(vin_vehicleNo, decodedVIN_type2)">Decode VIN!</button>
+				<ul id="decodedVIN_type2">
+				</ul>
+			</div>
+		</div>
 		
-		<ul id="decodedVIN">
-		</ul>
+			
+		
+		
+		
 		
 		<script>
 		
-		function decodeVin()
+		function combineVinCode()
+		{
+			var combinedVinCode = document.getElementById("vin_vehicleNo").value 
+				+ document.getElementById("vin_drive").value 
+				+ document.getElementById("vin_engine").value 
+				+ document.getElementById("vin_trans").value 
+				+ document.getElementById("vin_axle").value 
+				+ document.getElementById("vin_colour").value
+				+ document.getElementById("vin_trim").value
+				+ document.getElementById("vin_ldo").value;
+			return combinedVinCode;
+		}
+		
+		function decodeVin(vincode_input_id, vincode_result_id)
 		{
 			const country = ["Corris Britain"];
 			const countryCode = ["U"];
@@ -66,66 +139,73 @@
 			const rearWindow = ["Standard", "Heated", "Standard + Window Grille"];
 			const rearWindowCode = ["-", "B", "M"];
 			
-			var vinCode = document.getElementById("vincode").value;
+			var vinCode = document.getElementById(vincode_input_id.id).value;
+			if(vincode_input_id.id == "vin_vehicleNo")
+			{
+				vinCode = combineVinCode();
+			}
 			var vinCodeString = vinCode.toString();
-			
-			document.getElementById("decodedVIN").innerHTML = ""
-			
+			document.getElementById(vincode_result_id.id).innerHTML = ""
+			if(vincode_input_id.id == "vin_vehicleNo")
+			{
+				appendResult("Type: "+document.getElementById("vin_type").value.toString(), vincode_result_id);
+				appendResult("Version: "+document.getElementById("vin_version").value.toString(), vincode_result_id);
+			}
 			var countryResultStr = "1. Country: " + checkCode(countryCode, country, vinCodeString[0]);//1
-			appendResult(countryResultStr.toString());
+			appendResult(countryResultStr.toString(), vincode_result_id);
 			var assemblyResultStr = "2. Assembly: " + checkCode(assmblyPlantCode, assemblyPlant, vinCodeString[1]);//2
-			appendResult(assemblyResultStr.toString());
+			appendResult(assemblyResultStr.toString(), vincode_result_id);
 			var modelResultStr = "3. Model: " + checkCode(modelCode, model, vinCodeString[2]);//3
-			appendResult(modelResultStr.toString());
+			appendResult(modelResultStr.toString(), vincode_result_id);
 			var bodyTypeResultStr = "4. Body Type: " + checkCode(bodyTypeCode, bodyType, vinCodeString[3]);//4
-			appendResult(bodyTypeResultStr.toString());
+			appendResult(bodyTypeResultStr.toString(), vincode_result_id);
 			var versionCodeResultStr = "5. Version Code: " + checkCode(versionCode, version, vinCodeString[4]);//5
-			appendResult(versionCodeResultStr.toString());
+			appendResult(versionCodeResultStr.toString(), vincode_result_id);
 			var yearCodeResultStr = "6. Year Code: " + checkCode(yearCode, year, vinCodeString[5]);//6
-			appendResult(yearCodeResultStr.toString());
+			appendResult(yearCodeResultStr.toString(), vincode_result_id);
 			var monthCodeResultStr = "7. Month Code: " + checkCode(monthCode, month, vinCodeString[6]);//7
-			appendResult(monthCodeResultStr.toString());
+			appendResult(monthCodeResultStr.toString(), vincode_result_id);
 			var serialNumber = "8. Serial Number: " + vinCodeString.substring(7, 11);//8
-			appendResult(serialNumber.toString());
+			appendResult(serialNumber.toString(), vincode_result_id);
 			var driveCodeResultStr = "9. Drive Code: " + checkCode(driveCode, drive, vinCodeString[12]);//9
-			appendResult(driveCodeResultStr.toString());
+			appendResult(driveCodeResultStr.toString(), vincode_result_id);
 			var engineCodeResultStr = "10. Engine Code: " + checkCode(engineCode, engine, vinCodeString.substring(13, 15));//10
-			appendResult(engineCodeResultStr.toString());
+			appendResult(engineCodeResultStr.toString(), vincode_result_id);
 			var gearboxResultStr = "11. Gearbox: " + checkCode(gearboxCode, gearbox, vinCodeString[15]);//11
-			appendResult(gearboxResultStr.toString());
+			appendResult(gearboxResultStr.toString(), vincode_result_id);
 			var axleRatioResultStr = "12. Axle Ratio: " + checkCode(axleRatioCode, axleRatio, vinCodeString[16]);//12
-			appendResult(axleRatioResultStr.toString());
+			appendResult(axleRatioResultStr.toString(), vincode_result_id);
 			var axleLockResultStr = "13. Axle Lock: " + checkCode(axleLockCode, axleLock, vinCodeString[17]);//13
-			appendResult(axleLockResultStr.toString());
+			appendResult(axleLockResultStr.toString(), vincode_result_id);
 			var bodyColourResultStr = "14. Body Colour: " + checkCode(bodyColourCode, bodyColour, vinCodeString[18]);//14
-			appendResult(bodyColourResultStr.toString());
+			appendResult(bodyColourResultStr.toString(), vincode_result_id);
 			var vinylRoofResultStr = "15. Vinyl Roof: " + checkCode(vinylRoofCode, vinylRoof, vinCodeString[19]);//15
-			appendResult(vinylRoofResultStr.toString());
+			appendResult(vinylRoofResultStr.toString(), vincode_result_id);
 			var interiorTrimResultStr = "16. Interior Trim: " + checkCode(interiorTrimCode, interiorTrim, vinCodeString[20]);//16
-			appendResult(interiorTrimResultStr.toString());
+			appendResult(interiorTrimResultStr.toString(), vincode_result_id);
 			var radioResultStr = "17. Radio: " + checkCode(radioCode, radio, vinCodeString[21]);//17
-			appendResult(radioResultStr.toString());
+			appendResult(radioResultStr.toString(), vincode_result_id);
 			var instrumentPanelResultStr = "18. Instrument Panel: " + checkCode(instrumentPanelCode, instrumentPanel, vinCodeString[22]);//18
-			appendResult(instrumentPanelResultStr.toString());
+			appendResult(instrumentPanelResultStr.toString(), vincode_result_id);
 			var windShieldResultStr = "19. Windshield: " + checkCode(windShieldCode, windShield, vinCodeString[23]);//19
-			appendResult(windShieldResultStr.toString());
+			appendResult(windShieldResultStr.toString(), vincode_result_id);
 			var seatsResultStr = "20. Seats: " + checkCode(seatsCode, seats, vinCodeString[24]);//20
-			appendResult(seatsResultStr.toString());
+			appendResult(seatsResultStr.toString(), vincode_result_id);
 			var suspensionResultStr = "21. Suspension: " + checkCode(suspensionCode, suspension, vinCodeString[25]);//21
-			appendResult(suspensionResultStr.toString());
+			appendResult(suspensionResultStr.toString(), vincode_result_id);
 			var brakesResultStr = "22. Brakes: " + checkCode(brakesCode, brakes, vinCodeString[26]);//22
-			appendResult(brakesResultStr.toString());
+			appendResult(brakesResultStr.toString(), vincode_result_id);
 			var wheelsResultStr = "23. Wheels: " + checkCode(wheelsCode, wheels, vinCodeString[27]);//23
-			appendResult(wheelsResultStr.toString());
+			appendResult(wheelsResultStr.toString(), vincode_result_id);
 			var rearWindowResultStr = "24. Rear Window: " + checkCode(rearWindowCode, rearWindow, vinCodeString[28]);//24
-			appendResult(rearWindowResultStr.toString());
+			appendResult(rearWindowResultStr.toString(), vincode_result_id);
 		}
-		function appendResult(result)
+		function appendResult(result, vincode_result_id)
 		{
 			const element = document.createElement("li");
 			const resultTextNode = document.createTextNode(result.toString());
 			element.appendChild(resultTextNode);
-			document.getElementById("decodedVIN").appendChild(element);
+			document.getElementById(vincode_result_id.id).appendChild(element);
 		}
 		
 		
