--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,6 +93,16 @@
 		  width: 20%;
 		  text-align: center;
 		}
+		.column {
+		  float: left;
+		  width: 50%;
+		  padding: 10px;
+		}
+		.row:after {
+		  content: "";
+		  display: table;
+		  clear: both;
+		}
 	</style>
   </head>
   <body>
