--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,10 +97,9 @@
 		  float: left;
 		  width: 50%;
 		}
-		.row:after {
-		  content: "";
-		  display: table;
-		  clear: both;
+		.row {
+		margin: auto;
+		  text-align: center;
 		}
 	</style>
   </head>
@@ -109,7 +108,8 @@
 		  <a href="/">About</a>
 		  <a href="/workexperience">Work Experience</a>
 		  <a href="/projects">Projects</a>
-		  <a href="/vindecoder">MWC Vin Decoder</a>
+		  <a href="/vindecoder">MWC Vin Decoder V2</a>
+		  <a href="/vindecoder_v1">MWC Vin Decoder V1</a>
 		</div>
 		<br>
 		<div class="centerTop">
